--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <a href="https://github.com/shendeng8/vpn/raw/main/shendeng.apk" class="button">Android 下载 .apk</a>
                 <a href="web/login.html?channel=GitHub" class="button">iOS 网页版（建议优选海外AppStore下载）</a>
                 <a href="https://apps.apple.com/us/app/auto-vpn/id6478515858" class="button">iOS 海外AppStore下载</a>
-                <a href="https://github.com/shendeng8/vpn/raw/main/shendeng[Github]-V1.1.5.exe" class="button">Windows 下载 .exe</a>
-                <a href="https://github.com/shendeng8/vpn/raw/main/shendeng-v2.0.4[GitHub].pkg" class="button">macOS 下载 .pkg</a>
+                <a href="https://github.com/shendeng8/vpn/raw/refs/heads/main/shendeng%5BGithub%5D-V1.1.5.exe" class="button">Windows 下载 .exe</a>
+                <a href="https://github.com/shendeng8/vpn/raw/refs/heads/main/shendeng-v2.0.4%5BGitHub%5D.pkg" class="button">macOS 下载 .pkg</a>
                 <a href="https://sdvpn.app" class="button">永久官网 (需翻墙访问)</a>
             </div>
 
