--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <h2>联系方式</h2>
                 <p>遇到问题？请通过以下方式联系我们：</p>
                  <a href="mailto:sdvpn@sdvpn.app" class="button">官网邮箱（自动回复最新官网）sdvpn@sdvpn.app</a>
-                 <a href="mailto:sdhezuo@gmail.com" class="button">合作邮箱（商务合作请联系）sdhezuo@gmail.com</a>
+                 <a href="mailto:hezuo@sdvpn.app" class="button">合作邮箱（商务合作请联系）hezuo@sdvpn.app</a>
                  <div>
                     <a href="https://t.me/sdvpn01" class="button">Telegram官方群</a>
                  </div>
