--- a/web/contact.html
+++ b/web/contact.html
@@ -21,7 +21,7 @@
                     </div>
                 </div>
                 <div class="info">防封邮箱: <span>shendeng750@gmail.com</span></div>
-                <div class="info">商务合作: <span>sdhezuo@gmail.com</span></div>
+                <div class="info">商务合作: <span>hezuo@sdvpn.app</span></div>
             </div>
         </div>
     </div>
