--- a/appstore/freeAccount.html
+++ b/appstore/freeAccount.html
@@ -92,7 +92,7 @@
             <div class="nyDN">
                 <p>当发现商店内容变为繁体内容后证明您已经切换到香港地区了;</p><br>
                 <p>此时您可以点击下方按钮直接下载，或在商店中自行搜索<span class="color1">&lt;Auto-VPN&gt;</span>进行下载;</p><br>
-                <a href="https://apps.apple.com/us/app/auto-vpn/id6478515858" class="nyDNtza">跳转 App store 下载</a>
+                <a href="https://apps.apple.com/us/app/auto-vpn/id6478515858" target="_blank" class="nyDNtza">跳转 App store 下载</a>
                 <div class="nyDimg"><img src="images/1T08.jpg"></div>
             </div>
         </div>
@@ -108,6 +108,11 @@
         </div>
     </section>
 </article>
+<script>
+    function gotoPublicAppleId(){
+        window.open('https://www.gs18.cn/?id=83646500920','_blank');
+    }
+</script>
 </body>
 
 
