--- a/appstore/help.html
+++ b/appstore/help.html
@@ -90,7 +90,8 @@
         });
 
         function downApp(){
-            location.href="https://apps.apple.com/us/app/auto-vpn/id6478515858"
+            // location.href="https://apps.apple.com/us/app/auto-vpn/id6478515858"
+            window.open('https://apps.apple.com/us/app/auto-vpn/id6478515858','_blank')
         }
     </script>
 </div>
