--- a/appstore/new.html
+++ b/appstore/new.html
@@ -21,7 +21,7 @@
             <div class="nyDT Huans">第一步:</div>
             <div class="nyDN">
                 <p>进入 Apple 的创建 Apple lD 网站:</p>
-                <a href="https://appleid.apple.com/account" class="color1">&lt;https://appleid.apple.com/account&gt;</a>
+                <a href="https://appleid.apple.com/account" target="_blank" class="color1">&lt;https://appleid.apple.com/account&gt;</a>
             </div>
         </div>
         <div class="nyDD">
@@ -80,7 +80,7 @@
             <div class="nyDN">
                 <p>当发现商店内容变为繁体内容后证明您已经切换到香港地区了;</p><br>
                 <p>此时您可以点击下方按钮直接下载神灯 VPN，或在商店中自行搜索<span class="color1">&lt;Auto-VPN&gt;</span>进行下载;</p><br>
-                <a href="https://apps.apple.com/us/app/auto-vpn/id6478515858" class="nyDNtza">跳转 App store 下载</a>
+                <a href="https://apps.apple.com/us/app/auto-vpn/id6478515858" target="_blank" class="nyDNtza">跳转 App store 下载</a>
                 <div class="nyDimg"><img src="images/1T08.jpg"></div>
             </div>
         </div>
