--- a/appstore/login.html
+++ b/appstore/login.html
@@ -149,7 +149,7 @@
         });
     });
     function  oldEnter(){
-        location.href = "https://shendeng8.github.io/vpn/web/login.html?channel="+channel
+        location.href = "https://shendeng8.github.io/vpn/web/index.html?channel="+channel
     }
 </script>
 </body>
