--- a/web/login.html
+++ b/web/login.html
@@ -192,7 +192,7 @@
         });
 
         function goNewEnter(){
-            location.href= 'https://shendeng8.github.io/vpn/appstore/login.html?channel='+channel;
+            location.href= 'https://shendeng8.github.io/vpn/appstore/index.html?channel='+channel;
         }
     </script>
 </body>
