--- a/web/help.html
+++ b/web/help.html
@@ -379,7 +379,7 @@
             window.open('https://apps.apple.com/us/app/auto-vpn/id6478515858','_blank');
         }
         function toPublicAppleId(){
-            window.open('https://www.gs18.cn/?id=83646500920','_blank');
+            window.open('https://cfhen.cn/s/?s=fmJCrkguyT','_blank');
         }
     </script>
 </div>
