--- a/web/help.html
+++ b/web/help.html
@@ -379,7 +379,7 @@
             window.open('https://apps.apple.com/us/app/auto-vpn/id6478515858','_blank');
         }
         function toPublicAppleId(){
-            window.open('https://cfhen.cn/s/?s=owBeUfLuZY','_blank');
+            window.open('https://ppaa.mhsy.xyz/U1711daizhuce','_blank');
         }
     </script>
 </div>
