--- a/web/user.html
+++ b/web/user.html
@@ -41,10 +41,12 @@
 
       <div>
         <div style="font-size: 16px; font-weight: bold;">IOS用户须知</div>
-        *<span style="color: orangered">Outline已在中国区下架</span>，已下载用户目前不影响使用，但需在2025年3月1日前迁移至神灯IOS客户端，现在下载赠送15天VIP时长<br/>
+        *<span style="color: orangered">Outline已在中国区下架</span>，已下载用户目前不影响使用，建议使用神灯IOS客户端，现在下载赠送15天VIP时长<br/>
         *未下载Outline的用户建议AppStore下载神灯IOS客户端（需外区Apple ID下载），享海量线路和7/24技术支持，更有惊喜福利等着你！<br/>
 
           <button class="toHelp" style="font-weight: bold;color: #2468F2;margin-bottom: 13px;">点此查看下载教程>></button>
+          <br/>
+        *温馨提示：web端允许最多三个设备登录，且同一时间只允许一个设备连接使用，滥用线路将会封号处理；
       </div>
     </div>
   </div>
