--- a/web/index.html
+++ b/web/index.html
@@ -123,7 +123,7 @@
                 <button class="close"><img src="images/close.png"/></button>
                 <div class="title">重要通知</div>
                 <div class="desc">
-                    <span style="color: orangered">Outline已在中国区下架</span><br/>已下载用户目前不影响使用，建议使用神灯IOS客户端，过期不再维护！<br/>
+                    <span style="color: orangered">Outline已在中国区下架</span><br/>已下载用户目前不影响使用，但请尽快迁移到客户端，享受更完善的服务，待用户迁移完毕后此客户端不再维护！<br/>
                     现在下载神灯IOS客户端您可以：<br/>
                     1.赠送15天VIP时长（在IOS客户端登录即到账）；<br/>
                     2.享受海量高速专线，线路更稳定，更快速；<br/>
